<resources>
    <string name="app_name">Theoretics Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="conn">ReConnnect</string>
    <string name="tip">Received Message</string>
    <string name="ic">ICTest</string>
    <string name="mag">MagTest</string>
    <string name="rf">Scan Card</string>
    <string name="rfPlus">Mifare Plus</string>
    <string name="nfc">nfcTest</string>
    <string name="id">IDCard</string>
    <string name="getSN">getSN</string>
    <string name="loadSN">loadSN</string>
    <string name="update">Update Firmware</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_confirm">confirm</string>
    <string name="SN_dialog_title">Write SN Number</string>
    <string name="SN_dialog_message">Please enter SN Number:</string>
    <string name="conn_up">Conn</string>
    <string name="version">Version No.</string>
    <string name="back">back</string>
    <string name="printtest">Print</string>
    <string name="printtx">printtext</string>
    <string name="printtip">Please input worlds \.\.\.</string>
    <string name="test_ncarda">typeA</string>
    <string name="test_ncardb">typeB</string>
    <string name="card_reset_failed">TypeBCard reset failed</string>
    <string name="card_reset_ok">TypeBCard reset OK</string>
    <string name="acard_reset_failed">TypeACard reset failed</string>
    <string name="acard_reset_ok">TypeACard reset OK</string>
    <string name="show_version">The version number:</string>
    <string name="track2">track2:</string>
    <string name="cardnum">cardnum:</string>
    <string name="expDate">ExpDate:</string>
    <string name="tLVData">TLVData:</string>
    <string name="icSeq">IcSeq:</string>
    <string name="domain_ff">55 domain:</string>
    <string name="terminated">terminated</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="qr_test">QR Test</string>
    <string name="finger_test">Fingerprint Test</string>
    <string name="contactless_card_test">VIP Card Check</string>
    <string name="device_information">Device Information</string>
    <string name="device_led">LED Test</string>
    <string name="btn_send_qrcode">Send Result</string>
    <string name="btn_scan_again">Scan Again</string>
    <string name="btn_create_qrcode">generate QRcode</string>
    <string name="btn_scan_qrcode">Scan QRcode</string>
    <string name="btn_long_press_to_identify_qrcode">long press to identify qrcode</string>
    <string name="test_sim">Exit</string>
    <string name="testpsam1check">Check if there is a card in the PSAM card slot</string>
    <string name="testpsam1ok">psam card device reset ok</string>
    <string name="out_of_paper">Out of paper!Out of paper!</string>
    <string name="check_paper">Enter print error!</string>
    <string name="string_byd_fps_template_null">Fingerprint template library is empty, make a fingerprint input!\n</string>
    <string name="string_byd_fps_verify_failed_request">Verify failed, Please move your finger to get more useful information!\n</string>
    <string name="string_byd_fps_verify_failed">Fingerprint Verify failed!\n</string>
    <string name="string_byd_fps_verify_success">Fingerprint Verify successfully\n</string>
    <string name="string_byd_fps_verify_use_standby">Fingerprint template library is empty!\n</string>
    <string name="string_byd_fps_verify_max_retry">Compare maximum number, please try again !</string>
    <string name="string_lockscreen_unlock">Fingerprint unlock!</string>
    <string name="string_byd_fps_enrol_once_more">Try one more time</string>
    <string name="enrollment">enrollment</string>
    <string name="verify">verify</string>
    <string name="tip01">Latest Firmware,do not need to update</string>
    <string name="tip02">NetWork Error,Pls check</string>
    <string name="tip03">Do not need to udpate,pls check version or config</string>
    <string name="tip04">Jump to Boot successful</string>
    <string name="tip05">Jump to Boot failed</string>
    <string name="tip06">Shake hands successful</string>
    <string name="tip07">Shake hands failed</string>
    <string name="tip08">Sel App successful</string>
    <string name="tip09">Sel App failed</string>
    <string name="tip10">Get .bin lenth successful</string>
    <string name="tip11">Get .bin lenth failed</string>
    <string name="tip12">Last one pack data download failed</string>
    <string name="tip13">Jump to App successful</string>
    <string name="tip14">Jump to App failed</string>
    <string name="tip15">pack data download failed</string>
    <string name="tip16">read .bin failed</string>
    <string name="tip17">Updating,Pls wait</string>
    <string name="tip18">Tip</string>
    <string name="tip19">Firmware update successful</string>
    <string name="tip20">Firmware downloading</string>
    <string name="tip21">Firmware download successful</string>
    <string name="ChinesEncode">Chinese</string>
    <string name="JapaneseEncode">Japanese</string>
    <string name="KoreanEncode">Korean</string>
    <string name="EnglishEncode">English</string>
    <string name="RussianEncode">Russian</string>
    <string name="Encode">Select EnCode</string>
    <string name="print">print</string>
    <string name="picture">picture</string>
    <string name="debug">debug</string>
    <string name="stop">stop</string>
    <string name="waiting_print">You click too fast, try again later!</string>
    <string name="finger_tip">Pls use device with fingerprint  to test!</string>
    <string name="finger_tip01">data  error!</string>
    <string name="finger_tip02">enrollment timout!</string>
    <string name="finger_tip03">enrollment fail!</string>
    <string name="finger_tiperr">communication fail!</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="vip_name">VIP Name</string>
    <string name="plate_number">Plate Number</string>
    <string name="vip_type">VIP Type</string>
    <string name="status">Status</string>
</resources>