<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="16dp"
    tools:context="com.bluepriter.test.MainActivity" >

    <EditText
        android:id="@+id/etprint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/printtip"
        android:lines="8" />

    <TextView
        android:id="@+id/tvl1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/etprint"
        android:background="#f00" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvl1"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/lr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Encode" />

            <RadioGroup
                android:id="@+id/RadioGroup01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/RbChinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/ChinesEncode"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/RbJapanese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/JapaneseEncode"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/RbKorean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KoreanEncode"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/RbEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EnglishEncode"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/RbRussian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RussianEncode"
                    android:textColor="@color/black" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="20dp" >

            <Button
                android:id="@+id/bttext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/print" />

            <Button
                android:id="@+id/btpicture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/picture" />

            <Button
                android:id="@+id/btdebug"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/debug"
                android:visibility="gone" />

            <Button
                android:id="@+id/btstop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/stop"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvl2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll"
        android:background="#f00" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvl2" >

        <TextView
            android:id="@+id/tvcontent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</RelativeLayout>