<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bt_print"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/printtest"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_contactless_card"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/contactless_card_test"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_psam_card"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/test_sim"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_qrtest"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/qr_test"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_finger"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/finger_test"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_ledtest"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/device_led"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_deviceInformation"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/device_information"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_poweron"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:text="poweron"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_poweroff"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:text="poweroff"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_update"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/update"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>